# rgrpc

./: pants.toml  pyproject.toml
example/: pyproject.toml
example/src/example/: echo_listener.py  echo_requester.py
example/src/example/proto/v1/: BUILD  echo.proto
pants/plugins/extra/codegen/protobuf/python/: additional_fields.py  protoc_plugins.py  python_protobuf_module_mapper.py  python_protobuf_module_mapper_test.py  python_protobuf_subsystem.py  python_protobuf_subsystem_test.py  register.py  rules.py  rules_integration_test.py
src/rgrpc/: __init__.py  listener.py  requester.py
tests/: test_foo.py  test_rgrpc.py
