[tool.poetry]
name = "rgrpc"
version = "0.1.0"
description = "A grpclib helper to reverse connect two hosts."
authors = ["Israël Hallé <israel.halle@flare.io>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
